--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,46 +1,30 @@
-pipeline {
-    agent any
+pipeline {                                           // 1 // Defines the start of the jenkins pipeline block
+    agent any                                        // Specifies the pipeline can run on any available agent
+    environment {                                    // 2 // Defines environment variables for the pipeline
+        PATH = "/opt/maven/bin:$PATH"                // Adds Maven's path to the system's PATH variable
+    }                                                // 2  // Ends the environment block
+    
+    stages {                                         // 3  // Defines the stages block where multiple stages are declared
 
-    environment {
-        // Define SonarQube server URL and credentials
-        SONARQUBE_SERVER = 'SonarQube'
-        SONARQUBE_SCANNER = '/usr/local/bin/sonar-scanner' // Path to sonar-scanner, adjust as needed
-    }
+        stage("build") {                             // 4  // Creates a stage named 'build'
+            steps {                                  // 5  // Defines the steps that will be executed in this stage
+                sh 'mvn clean deploy'                // Runs the Maven clean and deploy command to build the project
+            }                                        // 5  // Ends the steps block for 'build' stage
+        }                                            // 4  // Ends the 'build' stage
+        
+        stage('SonarQube analysis') {                // 6  // Creates a stage named 'SonarQube analysis'
+            environment {                            // 7  // Defines environment variables specific to this stage 
+                scannerHome = tool 'saidemy-sonar-scanner'
+                                                     // Sets the SonarQube scanner tool
+            }                                        // 7 // Ends the environment block for this stage
 
-    stages {
-        stage('Checkout') {
-            steps {
-                // Checkout your code
-                checkout scm
-            }
-        }
-
-        stage('Build') {
-            steps {
-                // Compile your project (adjust for your build tool)
-                sh 'mvn clean install'  // Maven example, adjust if you use a different build tool
-            }
-        }
-
-        stage('SonarQube Analysis') {
-            steps {
-                script {
-                    // Run SonarQube analysis using sonar-scanner
-                    withSonarQubeEnv(SONARQUBE_SERVER) {
-                        sh "${SONARQUBE_SCANNER} -Dsonar.projectKey=my_project_key -Dsonar.sources=src"
-                    }
-                }
-            }
-        }
-
-        stage('Quality Gate') {
-            steps {
-                script {
-                    // Wait for SonarQube analysis to complete and check the Quality Gate status
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
-    }
-}
-
+            steps {                                  // 8 // Defines the steps that will be executed in this stage
+                withSonarQubeEnv('saidemy-sonarqube-server') {
+                                                     // Executes the SonarQube analysis within the sonarqube environment
+                    sh "${scannerHome}/bin/sonar-scanner"
+                                                     // Runs the SonarQube scaneer tool
+                }                                    // Ends the Sonarqube scanner tool
+            }                                        // 8 // Ends the steps Block for 'SonarQube analysis' stage
+        }                                            // 6 // Ends the 'Sonarqube analysis'stage
+     }                                               // 3 // Ends the stages block
+}                                                    // 1 // Ends the pipelines block
