--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,9 @@
 sonar.verbose=true
-sonar.projectKey=testorganisation0112_testproject
-sonar.projectName=testprojec
-sonar.organisation=testorganisation01
-sonar.sources=
+sonar.organisation=saidemy01
+sonar.projectKey=saidemy01-keeeey_saidemytrend
+sonar.projectName=saidemytrend
 sonar.language=java
 sonar.sourceEncoding=UTF-8
+sonar.sources=
 sonar.java.binaries=target/classes
-sonar.coverage.jacoco.xmlreportPaths=target/site/jacoco.xml
-
-
-
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco.xml
